JWLS-1 Rewrite in Golang und Angular
Added device list for owners
