# database/jewels.go
@@ -9,7 +9,7 @@ import (
 
 var ErrNotSameOwner = errors.New("device has different owner")
 
-func GetJewelsByUser(email string) ([]Device, error) {
+func FindMyJewels(email string) ([]Device, error) {
 	client, err := OpenConnection()
 	if err != nil {
 		return nil, err
@@ -27,6 +27,32 @@ func GetJewelsByUser(email string) ([]Device, error) {
 	}
 
 	cursor, err := deviceCollection.Find(ctx, bson.M{"ownerId": owner.Id})
+	if err != nil {
+		return nil, err
+	}
+
+	var devices []Device
+	err = cursor.All(ctx, &devices)
+	if err != nil {
+		return nil, err
+	}
+
+	return devices, nil
+}
+
+func FindJewelsByOwner(owner string) ([]Device, error) {
+	client, err := OpenConnection()
+	if err != nil {
+		return nil, err
+	}
+
+	defer CloseConnection(client)
+
+	ctx, cancelFunc := GetContext()
+	defer cancelFunc()
+
+	deviceCollection := GetDevicesCollection(client)
+	cursor, err := deviceCollection.Find(ctx, bson.M{"ownerId": owner})
 	if err != nil {
 		return nil, err
 	}
@@ -66,7 +92,7 @@ func GetJewelsById(id string) ([]Device, error) {
 	return devices, nil
 }
 
-func DeleteJewel(email, jewel string) error {
+func DeleteMyJewel(email, jewel string) error {
 	client, err := OpenConnection()
 	if err != nil {
 		return err
@@ -84,6 +110,23 @@ func DeleteJewel(email, jewel string) error {
 	}
 
 	_, err = deviceCollection.DeleteOne(ctx, bson.M{"ownerId": owner.Id, "id": jewel})
+
+	return err
+}
+
+func DeleteJewelByOwner(owner, jewel string) error {
+	client, err := OpenConnection()
+	if err != nil {
+		return err
+	}
+
+	defer CloseConnection(client)
+
+	ctx, cancelFunc := GetContext()
+	defer cancelFunc()
+
+	deviceCollection := GetDevicesCollection(client)
+	_, err = deviceCollection.DeleteOne(ctx, bson.M{"ownerId": owner, "id": jewel})
 
 	return err
 }
@@ -115,6 +158,28 @@ func CreateJewel(email string, device Device) (*Device, error) {
 	return &device, err
 }
 
+func CreateJewelByOwner(owner string, device Device) (*Device, error) {
+	client, err := OpenConnection()
+	if err != nil {
+		return nil, err
+	}
+
+	defer CloseConnection(client)
+
+	ctx, cancelFunc := GetContext()
+	defer cancelFunc()
+
+	deviceCollection := GetDevicesCollection(client)
+	if device.Id == "" {
+		device.Id = uuid.New().String()
+	}
+
+	device.OwnerId = owner
+	_, err = deviceCollection.InsertOne(ctx, device)
+
+	return &device, err
+}
+
 func CreateToken(email, token string) error {
 	client, err := OpenConnection()
 	if err != nil {
@@ -132,10 +197,10 @@ func CreateToken(email, token string) error {
 	return err
 }
 
-func checkJewelOwner(email, deviceId string) bool {
+func CreateTokenByOwner(owner, token string) error {
 	client, err := OpenConnection()
 	if err != nil {
-		return false
+		return err
 	}
 
 	defer CloseConnection(client)
@@ -143,15 +208,10 @@ func checkJewelOwner(email, deviceId string) bool {
 	ctx, cancelFunc := GetContext()
 	defer cancelFunc()
 
-	deviceCollection := GetDevicesCollection(client)
-	owner, err := FindOwnerByEmail(email)
-	if err != nil {
-		return false
-	}
+	ownerCollection := GetOwnersCollection(client)
+	_, err = ownerCollection.UpdateOne(ctx, bson.M{"_id": owner}, bson.M{"$push": bson.M{"tokens": token}})
 
-	count, err := deviceCollection.CountDocuments(ctx, bson.M{"ownerId": owner.Id, "id": deviceId}, options.Count().SetLimit(1))
-
-	return count > 0 && err != nil
+	return err
 }
 
 func UpdateJewel(email string, device Device) error {
@@ -175,7 +235,7 @@ func UpdateJewel(email string, device Device) error {
 		device.Id = uuid.New().String()
 	}
 
-	if checkJewelOwner(email, device.Id) {
+	if checkJewelOwnerByEmail(email, device.Id) {
 		return ErrNotSameOwner
 	}
 
@@ -184,4 +244,70 @@ func UpdateJewel(email string, device Device) error {
 	_, err = deviceCollection.UpdateOne(ctx, bson.M{"id": device.Id, "ownerId": device.OwnerId}, bson.M{"$set": device})
 
 	return err
+}
+
+func UpdateJewelByOwner(owner string, device Device) error {
+	client, err := OpenConnection()
+	if err != nil {
+		return err
+	}
+
+	defer CloseConnection(client)
+
+	ctx, cancelFunc := GetContext()
+	defer cancelFunc()
+
+	deviceCollection := GetDevicesCollection(client)
+	if device.Id == "" {
+		device.Id = uuid.New().String()
+	}
+
+	if checkJewelOwnerById(owner, device.Id) {
+		return ErrNotSameOwner
+	}
+
+	device.OwnerId = owner
+
+	_, err = deviceCollection.UpdateOne(ctx, bson.M{"id": device.Id, "ownerId": device.OwnerId}, bson.M{"$set": device})
+
+	return err
+}
+
+func checkJewelOwnerById(ownerId, deviceId string) bool {
+	client, err := OpenConnection()
+	if err != nil {
+		return false
+	}
+
+	defer CloseConnection(client)
+
+	ctx, cancelFunc := GetContext()
+	defer cancelFunc()
+
+	deviceCollection := GetDevicesCollection(client)
+	count, err := deviceCollection.CountDocuments(ctx, bson.M{"ownerId": ownerId, "id": deviceId}, options.Count().SetLimit(1))
+
+	return count > 0 && err != nil
+}
+
+func checkJewelOwnerByEmail(email, deviceId string) bool {
+	client, err := OpenConnection()
+	if err != nil {
+		return false
+	}
+
+	defer CloseConnection(client)
+
+	ctx, cancelFunc := GetContext()
+	defer cancelFunc()
+
+	deviceCollection := GetDevicesCollection(client)
+	owner, err := FindOwnerByEmail(email)
+	if err != nil {
+		return false
+	}
+
+	count, err := deviceCollection.CountDocuments(ctx, bson.M{"ownerId": owner.Id, "id": deviceId}, options.Count().SetLimit(1))
+
+	return count > 0 && err != nil
 }
